--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -190,6 +190,38 @@ sleep(2.2s);
 \end{urbiscript}
 
 
+\subsubsection{Scope tags}
+\label{sec:specs:tag:scope}
+
+Scopes feature a \lstindex{scopeTag}, i.e., a tag which will be stop
+when the execution reaches the end of the current scope.  This is
+handy to implement cleanups, how ever the scope was exited from.
+
+\begin{urbiscript}
+{
+  var t = scopeTag;
+  t: every(1s)
+      echo("foo"),
+  sleep(2.2s);
+};
+[00006562] *** foo
+[00006562] *** foo
+[00006562] *** foo
+
+{
+  var t = scopeTag;
+  t: every(1s)
+      echo("bar"),
+  sleep(2.2s);
+  throw 42;
+};
+[00006562] *** bar
+[00006562] *** bar
+[00006562] *** bar
+[00006562:error] !!! 42
+sleep(2s);
+\end{urbiscript}
+
 \subsection{Methods}
 
 \begin{itemize}
