--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -15,6 +15,7 @@
 \input{specs/dictionary}
 \input{specs/directory}
 \input{specs/event}
+\input{specs/file}
 \input{specs/float}
 \input{specs/formatter}
 \input{specs/formatinfo}
