--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -264,8 +264,8 @@ below.  Backslash introduces the following escapes:
   \lstinline|\B(\var{length})(\var{content})|
   & binary blob.  A \var{length}-long sequence of verbatim
   \var{content}.  \var{length} is expressed in decimal.  \var{content}
-  is not interpreted in any way.  The parentheses below to the syntax,
-  and are required.  For instance \lstinline|\B(2)(\B)|\\
+  is not interpreted in any way.  The parentheses are part of the syntax,
+  they are mandatory.  For instance \lstinline|\B(2)(\B)|\\
   \hline
 \end{tabular}
 
