--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -7,6 +7,7 @@
 \let\sectionOrig\section
 \renewcommand{\section}[1]{\sectionOrig{\labelObject{#1}\lstindex{#1}}}
 
+\input{specs/binary}
 \input{specs/boolean}
 \input{specs/callmessage}
 \input{specs/channel}
