--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -22,6 +22,7 @@
 \input{specs/formatinfo}
 \input{specs/global}
 \input{specs/group}
+\input{specs/input-stream}
 \input{specs/lazy}
 \input{specs/list}
 \input{specs/lobby}
