--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -29,6 +29,7 @@
 \input{specs/mutex}
 \input{specs/object}
 \input{specs/orderable}
+\input{specs/output-stream}
 \input{specs/pair}
 \input{specs/path}
 \input{specs/primitive}
