--- a/doc/specs/global.tex
+++ b/doc/specs/global.tex
@@ -9,7 +9,7 @@ anywhere.
 \subsection{Prototypes}
 \begin{itemize}
 \item \refObject{uobjects}
-\item \refObject{Tags}
+\item \refObject{Tag}
 \item \refObject{Math}
 \item \refObject{Kernel1}
 \item \refObject{System}
