--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -26,6 +26,7 @@
 \input{specs/lazy}
 \input{specs/list}
 \input{specs/lobby}
+\input{specs/math}
 \input{specs/mutex}
 \input{specs/object}
 \input{specs/orderable}
