--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -23,6 +23,7 @@
 \input{specs/global}
 \input{specs/group}
 \input{specs/input-stream}
+\input{specs/kernel1}
 \input{specs/lazy}
 \input{specs/list}
 \input{specs/lobby}
