--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -13,6 +13,7 @@
 \input{specs/channel}
 \input{specs/code}
 \input{specs/comparable}
+\input{specs/date}
 \input{specs/dictionary}
 \input{specs/directory}
 \input{specs/event}
