doc: s/Methods/Slots/.
	* doc/specs/boolean.tex,
	* doc/specs/channel.tex,
	* doc/specs/dictionary.tex,
	* doc/specs/directory.tex,
	* doc/specs/event.tex,
	* doc/specs/file.tex,
	* doc/specs/float.tex,
	* doc/specs/formatinfo.tex,
	* doc/specs/formatter.tex,
	* doc/specs/global.tex,
	* doc/specs/group.tex,
	* doc/specs/input-stream.tex,
	* doc/specs/lazy.tex,
	* doc/specs/list.tex,
	* doc/specs/lobby.tex,
	* doc/specs/object.tex,
	* doc/specs/output-stream.tex,
	* doc/specs/pair.tex,
	* doc/specs/path.tex,
	* doc/specs/range-iterable.tex,
	* doc/specs/regexp.tex,
	* doc/specs/server.tex,
	* doc/specs/singleton.tex,
	* doc/specs/socket.tex,
	* doc/specs/string.tex,
	* doc/specs/system.tex,
	* doc/specs/tag.tex:
	(Methods): Rename as...
	(Slots): this.

--- a/doc/specs/boolean.tex
+++ b/doc/specs/boolean.tex
@@ -28,7 +28,7 @@ assert(true.new === true);
 assert(6 < 2 === false);
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|'&&'(\var{that})|\\
