--- a/doc/specs/channel.tex
+++ b/doc/specs/channel.tex
@@ -17,7 +17,7 @@ called with a string which will be the label.
 var c = Channel.new("my_label") | {};
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 
