--- a/doc/specs/dictionary.tex
+++ b/doc/specs/dictionary.tex
@@ -48,7 +48,7 @@ Dictionary.new("one", 1, "two", 2);
 [00000000] Dictionary {"one" => 1, "two" => 2}
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|asBool|\\
