--- a/doc/specs/directory.tex
+++ b/doc/specs/directory.tex
@@ -20,7 +20,7 @@ var slash = Directory.new(Path);
 [00000002] Directory("/")
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|list|\\
   A list of String of the content of the directory.
