--- a/doc/specs/event.tex
+++ b/doc/specs/event.tex
@@ -18,7 +18,7 @@ var e = Event.new;
 [00000001] Event_0x9ad8118
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|asEvent|\\
   Return \lstinline|this|.
