--- a/doc/specs/file.tex
+++ b/doc/specs/file.tex
@@ -24,7 +24,7 @@ File.new(Path.new("file.txt"));
 You may use \refObject{InputStream} and \refObject{OutputStream} to
 read or write to Files.
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|asList|\\
