--- a/doc/specs/formatinfo.tex
+++ b/doc/specs/formatinfo.tex
@@ -63,7 +63,7 @@ following:
   \hline
 \end{tabular}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|alignment|\\
   Requested alignment: \lstinline|-1| for left, \lstinline|0| for
