--- a/doc/specs/formatter.tex
+++ b/doc/specs/formatter.tex
@@ -23,7 +23,7 @@ Formatter.new("Name:%s, Surname:%s;");
 Actually, formatting patterns are translated into
 \refObject{FormatInfo}.
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|asList|\\
