--- a/doc/specs/group.tex
+++ b/doc/specs/group.tex
@@ -58,7 +58,7 @@ Group.new(1, "two");
 [00000000] Group [1, "two"]
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|add(\var{member}, ...)|\\
