--- a/doc/specs/input-stream.tex
+++ b/doc/specs/input-stream.tex
@@ -21,7 +21,7 @@ InputStream.new(File.new("file.txt"));
 [00000001] InputStream_0x827000
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|get|\\
