--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -23,7 +23,7 @@ Non-empty list may actually \emph{terminate} with a comma, rather than
 [00000000] [1, "2", [3]]
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|all(\var{fun})|\\
