--- a/doc/specs/lobby.tex
+++ b/doc/specs/lobby.tex
@@ -18,7 +18,7 @@ this.protos;
 [00000001] [Lobby]
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|connected|\\
   Whether \lstinline|this| is connected.
