--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -11,7 +11,7 @@ with many primitives that are mandatory for all object in \us.
 \item \refObject{Global}
 \end{itemize}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|acceptVoid|\\
