--- a/doc/specs/output-stream.tex
+++ b/doc/specs/output-stream.tex
@@ -23,7 +23,7 @@ OutputStream.new(File.create("new.txt"));
 [00000001] OutputStream_0x827000
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|<<(\var{that})|\\
