--- a/doc/specs/pair.tex
+++ b/doc/specs/pair.tex
@@ -20,7 +20,7 @@ Pair.new(3);
 [00000002] (3, 3)
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|asString|\\
   Generate the string \samp{(\var{first}, \var{second})} using
