--- a/doc/specs/path.tex
+++ b/doc/specs/path.tex
@@ -27,7 +27,7 @@ Path.new("././///.//foo/");
 [00000002] Path("foo")
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|absolute|\\
   Whether \lstinline|this| is absolute.
