--- a/doc/specs/range-iterable.tex
+++ b/doc/specs/range-iterable.tex
@@ -10,7 +10,7 @@ support an \lstinline|asList| method, to use range-based
 \item \refObject{Object}
 \end{itemize}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|each(\var{fun})|\\
