--- a/doc/specs/regexp.tex
+++ b/doc/specs/regexp.tex
@@ -23,7 +23,7 @@ Regexp.new(".");
 \href{http://perldoc.perl.org/perlre.html}{the perlre man page}.
 Expressions cannot be empty.
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|match(\var{str})|\\
   Whether \lstinline|this| matches \var{str}.
