--- a/doc/specs/server.tex
+++ b/doc/specs/server.tex
@@ -19,7 +19,7 @@ s.localSlotNames;
 [00000001] ["connection"]
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|connection|\\
   The event launched at each incoming connection. This event is
