--- a/doc/specs/singleton.tex
+++ b/doc/specs/singleton.tex
@@ -40,7 +40,7 @@ assert(s2 === NewSingleton2);
 assert(NewSingleton2 !== Singleton);
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|clone|\\
   Return \lstinline|this|.
