--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -25,7 +25,7 @@ assert(String == "");
 assert("123".new == "123");
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 \item \lstinline|asFloat|\\
   If the whole content of \lstinline|this| is an integer, return its
