--- a/doc/specs/system.tex
+++ b/doc/specs/system.tex
@@ -6,7 +6,7 @@ Details on the architecture the \urbi server runs on.
 \item \refObject{Object}
 \end{itemize}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 %% \item \lstinline|aliveJobs|
 %% \item \lstinline|arguments|
