--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -222,7 +222,7 @@ handy to implement cleanups, how ever the scope was exited from.
 sleep(2s);
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|block(\var{result} = void)|~\\
