--- a/doc/specs/lazy.tex
+++ b/doc/specs/lazy.tex
@@ -123,7 +123,7 @@ Lazy.new(closure () { /* Value to lazify */ });
 [00000000:hide] Lazy_0xADDR
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 
 \begin{itemize}
 \item \lstinline|eval|\\
