--- a/doc/specs/socket.tex
+++ b/doc/specs/socket.tex
@@ -18,7 +18,7 @@ new \lstinline|Socket| has four own slots: \lstinline|connected|,
 var s = Socket.new|
 \end{urbiscript}
 
-\subsection{Methods}
+\subsection{Slots}
 \begin{itemize}
 
 \item \lstinline|connect(\var{host}, \var{port})|\\
