doc: use assert_lt and the others.
	* doc/tex2chk: Also support === and !==.
	* share/urbi/system.u (assert_meq, assert_mne): New.
	* doc/specs/orderable.tex: Add parens so that we don't find
	operators where there are not.

--- a/doc/specs/orderable.tex
+++ b/doc/specs/orderable.tex
@@ -23,9 +23,9 @@ var one = Foo.new(1);
 var two = Foo.new(2);
 [00000002] <2>
 
-assert(  one <= one  &&   one <= two  && !(two <= one));
-assert(!(one >  one) && !(one >  two) &&   two >  one);
-assert(  one >= one  && !(one >= two) &&   two >= one);
+assert( (one <= one) &&  (one <= two) && !(two <= one));
+assert(!(one >  one) && !(one >  two) &&  (two >  one));
+assert( (one >= one) && !(one >= two) &&  (two >= one));
 \end{urbiscript}
 
 
