--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -122,7 +122,7 @@ x === y;
 \end{urbiscript}
 
 \item \lstinline|compl|\\
-  The complement to 1 of the target.
+  The complement to 1 of the target interpreted as a 32 bits integer.
 \begin{urbiscript}[firstnumber=last]
 assert(compl 0 == 4294967295);
 assert(compl 4294967295 == 0);
