MSVC: System.system goes background.
	* doc/specs/system.tex: Avoid issues wrt timing.

--- a/doc/specs/system.tex
+++ b/doc/specs/system.tex
@@ -192,6 +192,7 @@ assert (
 \begin{urbiscript}[firstnumber=last]
 assert(System.system("exit 0") == 0);
 assert(System.system("echo '[00000002] hello world'") == 0);
+sleep(1s);
 [00000002] hello world
 
 assert(System.system("exit 23") >> 8
