MSVC: Windows issues.
	* doc/urbi-report.sty (windows): New environment.
	* doc/specs/system.tex: Use it.
	Document the fact that setenv(X, "") == unsetenv(X) on Windows.

--- a/doc/specs/input-stream.tex
+++ b/doc/specs/input-stream.tex
@@ -10,6 +10,12 @@ provides a more fine-grained interface to read files.
 \item \refObject{Object}
 \end{itemize}
 
+\begin{windows}
+  Beware that because of limitations in the current implementation,
+  one cannot safely read from two different files at the same time
+  under Windows.
+\end{windows}
+
 \subsection{Construction}
 
 An InputStream is a reading-interface to a file, so its constructor
