doc: Add nao-specific chapter.
	* doc/specs/nao.tex: New.
	* doc/specs/specs.tex: Savagely unconditionally include it.

--- a/doc/specs/specs.tex
+++ b/doc/specs/specs.tex
@@ -20,3 +20,4 @@ only goal is to define the language and its libraries.
 \input{specs/tools}
 \input{specs/lang}
 \input{specs/stdlib}
+\input{specs/nao}
