--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -5,7 +5,13 @@
 %% call \labelObject each time.  See the bottom of this file for the
 %% restoring of \section.
 \let\sectionOrig\section
-\renewcommand{\section}[1]{\sectionOrig{\labelObject{#1}\lstindex{#1}}}
+\renewcommand{\section}[1]
+{%
+  \sectionOrig{\labelObject{#1}%
+    \index{#1@\lstinline{#1}}%
+    #1%
+  }%
+}
 
 \input{specs/binary}
 \input{specs/boolean}
