--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -5,7 +5,7 @@
   \makeindex
   \usepackage{urbi-report}
   \usepackage{indexing}
-  \newcommand{\lstindex}[1]{\index{#1@\lstinline{#1}}#1}
+  \newcommand{\lstindex}[1]{\index{#1@\lstinline{#1}}\lstinline{#1}}
   \usepackage{revision}
 
   \usepackage{config}
